--- a/views/doc/estimate1.html
+++ b/views/doc/estimate1.html
@@ -19,9 +19,15 @@
         }
     </style>
 
-<body class="p-5">
+<body class="p-1">
+    <div style="position: absolute; top: 100px; right: 10px;">
+        <img src="<%=my.FILENAME0%>" height="50"/>
+    </div>
+
     <div class="d-flex flex-row justify-content-between mb-4">
-        <div class="d-flex w-25">로고</div>
+        <div class="d-flex w-25">
+            <img src="<%=my.FILENAME1%>" height="40"/>
+        </div>
         <h1 class="d-flex w-50 justify-content-center mb-0">견 적 서</h1>
         <div class="d-flex w-25 align-items-end justify-content-end"><u>No. <%=my.docNum%></u></div>
     </div>
@@ -153,7 +159,7 @@
         </tr>
 <%
 
-    var gap = 21 - i;
+    var gap = 24 - i;
 
     if (i > 0) {
         for (j=0;j<gap;j++) {
