--- a/views/doc/estimate1.html
+++ b/views/doc/estimate1.html
@@ -24,10 +24,12 @@
         <img src="<%=my.FILENAME0%>" height="50"/>
     </div>
 
+    <div style="position: absolute; top: 0px; left: 0px;">
+        <img src="<%=my.FILENAME1%>" height="70"/>
+    </div>
+
     <div class="d-flex flex-row justify-content-between mb-4">
-        <div class="d-flex w-25">
-            <img src="<%=my.FILENAME1%>" height="40"/>
-        </div>
+        <div class="d-flex w-25"></div>
         <h1 class="d-flex w-50 justify-content-center mb-0">견 적 서</h1>
         <div class="d-flex w-25 align-items-end justify-content-end"><u>No. <%=my.docNum%></u></div>
     </div>
