--- a/views/doc/estimate1.html
+++ b/views/doc/estimate1.html
@@ -1,130 +1,197 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <!-- <meta name="viewport" content="width=1200, initial-scale=1, shrink-to-fit=no"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <style>
-        table {
-            width: 100%;
-            border: 1px solid #333333;
-            border-collapse: collapse;
-            font-size: 12px;
-        }
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<!-- <meta name="viewport" content="width=1200, initial-scale=1, shrink-to-fit=no"> -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-        td {
-            padding: 4px;
-            border: 1px solid #333333;
-        }
-    </style>
+<style>
+table { font-size: 14px; }
+</style>
+
+<script src="/javascripts/textFit.js"></script>
 
 <body class="p-1">
-    <div style="position: absolute; top: 100px; right: 10px;">
-        <img src="<%=my.FILENAME0%>" height="50"/>
-    </div>
-
     <div style="position: absolute; top: 0px; left: 0px;">
-        <img src="<%=my.FILENAME1%>" height="70"/>
+        <img src="<%=my.FILENAME1%>" height="50"/>
     </div>
 
-    <div class="d-flex flex-row justify-content-between mb-4">
-        <div class="d-flex w-25"></div>
-        <h1 class="d-flex w-50 justify-content-center mb-0">견 적 서</h1>
-        <div class="d-flex w-25 align-items-end justify-content-end"><u>No. <%=my.docNum%></u></div>
+    <div style="position: absolute; top: 140px; left: 750px;">
+        <img src="<%=my.FILENAME0%>" height="40"/>
     </div>
 
-    <div class="d-flex flex-row">
-        <div class="d-flex flex-column justify-content-between w-50">
-            <div class="align-self-center"><%=your.EDATE%></div>
-            <div class="d-flex flex-row justify-content-between w-75 align-self-center px-4" style="border-bottom: 1px dotted #333;">
-                <h4 class="mb-0"><b><%=your.COMPANY%></b></h4>
-                <div>귀중</div>
-            </div>
-            <div class="align-self-center" style="font-size: 12px; margin-top: -15px;">
-                <% if (your.TEL != '') { %>
-                <span class="me-1">T: <%=your.TEL%></span>
-                <% } %>
-                <% if (your.FAX != '') { %>
-                <span class="me-1">F: <%=your.FAX%></span>
-                <% } %>
-                <% if (your.HP != '') { %>
-                <span class="me-1">M: <%=your.HP%></span>
-                <% } %>
-                <% if (your.EMAIL != '') { %>
-                <span>E: <%=your.EMAIL%></span>
-                <% } %>
-            </div>
-            <div>아래와 같이 견적 합니다.</div>
-        </div>
+    <table cellspacing="0" cellpadding="0" class="w-100" style="font-size: 14px;">
+        <tr><td colspan="2" class="text-center"><b style="font-size: 50px;">견&nbsp;&nbsp;&nbsp;적&nbsp;&nbsp;&nbsp;서</b></td></tr>
+        <tr><td colspan="2" style="border-bottom: 1px solid #000;">No. <%=my.docNum%></td></tr>
 
-        <div class="d-flex flex-column  w-50">
-            <div style="font-size: 12px;">
-                <span class="me-1">담당자: <%=my.MANAGER%></span>
-                <span class="me-1">M: <%=my.HP%></span>
-                <span class="me-1">E: <%=my.EMAIL%></span>
-            </div>
-            <table>
-                <tr>
-                    <td rowspan="5" class="text-center bg-light">공<br><br>급<br><br>자</td>
-                    <td colspan="4" class="p-0">
-                        <table style="border: 0px;">
-                            <tr>
-                                <td class="bg-light" style="width: 100px; border: 0px;">사업자 등록번호</td>
-                                <td style="border: 0px; border-left: 1px solid #333333;"><%=my.CNUM%></td>
-                            </tr>
-                        </table>
+        <tr>
+            <td style="min-width: 500px;" valign="top">
+                <h4 class="mt-3"><%=your.COMPANY%> 귀중</h4>
+                <table>
+                    <tr>
+                        <th width="60" class="d-flex justify-content-between">
+                            <div>견</div>
+                            <div>적</div>
+                            <div>일</div>
+                        </th>
+                        <td class="px-1"></td>
+                        <td><%=your.EDATE%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>납</div>
+                            <div>기</div>
+                            <div>일</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.DLV%></td>
+                    </tr>
 
-                    </td>
-                </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>유</div>
+                            <div>효</div>
+                            <div>일</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.AVA%></td>
+                    </tr>
 
-                <tr>
-                    <td class="text-center bg-light">상호</td>
-                    <td><b><%=my.COMPANY%></b></td>
-                    <td class="text-center bg-light">성명</td>
-                    <td><%=my.NAME1%></td>
-                </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>견</div>
+                            <div>적</div>
+                            <div>내</div>
+                            <div>용</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.CONTENT%></td>
+                    </tr>
 
-                <tr>
-                    <td class="text-center bg-light">주소</td>
-                    <td colspan="3">(<%=my.ZIPCODE%>) <%=my.ADDR1%> <%=my.ADDR2%></td>
-                </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>참</div>
+                            <div>조</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.REFER%></td>
+                    </tr>
 
-                <tr>
-                    <td class="text-center bg-light">업태</td>
-                    <td><%=my.UPTAE%></td>
-                    <td class="text-center bg-light">종목</td>
-                    <td><%=my.JONGMOK%></td>
-                </tr>
-
-                <tr>
-                    <td class="text-center bg-light">TEL</td>
-                    <td><%=my.TEL%></td>
-                    <td class="text-center bg-light">FAX</td>
-                    <td><%=my.FAX%></td>
-                </tr>
-
-            </table>
-        </div>
-    </div>
-
-    <div class="d-flex flex-row justify-content-between my-4">
-        <h4 class="mb-0">견적금액<%=your.IS_VAT==0?'(VAT포함)':'(VAT별도)'%></h4>
-        <h4 class="mb-0">일금 <%=my.HAN_PRICE%> 원정 (￦<%=my.TTL_PRICE.toLocaleString()%>)</h4>
-    </div>
-
-    <table>
-        <tr class="text-center" style="background: #eeeeee;">
-            <td width="20">No.</td>
-            <td>품명</td>
-            <td>규격</td>
-            <td>단위</td>
-            <td>수량</td>
-            <td>단가</td>
-            <td>공급가액</td>
-            <td>세액</td>
-            <td>합계</td>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>전</div>
+                            <div>화</div>
+                            <div>번</div>
+                            <div>호</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.TEL%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>팩</div>
+                            <div>스</div>
+                            <div>번</div>
+                            <div>호</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.FAX%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>이</div>
+                            <div>메</div>
+                            <div>일</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.EMAIL%></td>
+                    </tr>
+                </table>
+            </td>
+            <td style="min-width: 500px;">
+                <h4 class="mt-3"><%=my.COMPANY%></h4>
+                <table>
+                    <tr>
+                        <th width="60" class="d-flex justify-content-between">
+                            <div>사</div>
+                            <div>업</div>
+                            <div>자</div>
+                            <div>번</div>
+                            <div>호</div>
+                        </th>
+                        <td class="px-1"></td>
+                        <td><%=my.CNUM%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>대</div>
+                            <div>표</div>
+                        </th>
+                        <td></td>
+                        <td><%=my.NAME1%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>업</div>
+                            <div>태</div>
+                        </th>
+                        <td></td>
+                        <td><%=my.UPTAE%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>종</div>
+                            <div>목</div>
+                        </th>
+                        <td></td>
+                        <td><%=my.JONGMOK%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>연</div>
+                            <div>락</div>
+                            <div>처</div>
+                        </th>
+                        <td></td>
+                        <td>
+                            <%=my.HP==''?'':'M: '+my.HP%>
+                            <%=my.TEL==''?'':'T: '+my.TEL%>
+                            <%=my.FAX==''?'':'F: '+my.FAX%>
+                            <%=my.EMAIL==''?'':'E: '+my.EMAIL%>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
+                            <div>주</div>
+                            <div>소</div>
+                        </th>
+                        <td></td>
+                        <td><%=my.ADDR1%> <%=my.ADDR2%></td>
+                    </tr>
+                </table>
+            </td>
         </tr>
+
+        <tr><td colspan="2" style="border-bottom: 1px solid #000; height: 30px;"></td></tr>
+        <tr style="height: 50px; ">
+            <td><h5>견적금액 <%=your.IS_VAT==0?'(VAT포함)':'(VAT별도)'%></h5></td>
+            <td class="text-end"><h5>일금 <%=my.HAN_PRICE%> 원정 (￦<%=my.TTL_PRICE.toLocaleString()%>)</h5></td>
+        </tr>
+
+        <tr>
+            <td colspan="2">
+                <table class="table table-striped">
+                    <tr class="text-center">
+                        <th width="50">No.</th>
+                        <th>품명</th>
+                        <th width="100">단위</th>
+                        <th width="50">수량</th>
+                        <th width="120">단가</th>
+                        <th width="120">공급가액</th>
+                        <th width="100">세액</th>
+                        <th width="120">합계</th>
+                    </tr>
 <%
     var priceSum = 0;
     var taxSum = 0;
@@ -132,74 +199,41 @@
     for (obj of list) {
         i++;
 %>
-        <tr>
-            <td align="center"><%=i%></td>
-            <td><%=obj.NAME1%></td>
-            <td align="center"><%=obj.GUKUK%></td>
-            <td align="center"><%=obj.UNIT%></td>
-            <td class="text-end"><%=obj.QTY.toLocaleString()%></td>
-            <td class="text-end"><%=obj.DANGA.toLocaleString()%></td>
-            <td class="text-end"><%=obj.PRICE.toLocaleString()%></td>
-            <td class="text-end"><%=obj.TAX.toLocaleString()%></td>
-            <td class="text-end"><%=(obj.PRICE + obj.TAX).toLocaleString()%></td>
-        </tr>
+                    <tr>
+                        <td align="center"><%=i%></td>
+                        <td><%=obj.NAME1%></td>
+                        <td align="center"><%=obj.UNIT%></td>
+                        <td class="text-center"><%=obj.QTY.toLocaleString()%></td>
+                        <td class="text-end"><%=obj.DANGA.toLocaleString()%></td>
+                        <td class="text-end"><%=obj.PRICE.toLocaleString()%></td>
+                        <td class="text-end"><%=obj.TAX.toLocaleString()%></td>
+                        <td class="text-end"><%=(obj.PRICE + obj.TAX).toLocaleString()%></td>
+                    </tr>
 <%
         priceSum = priceSum + obj.PRICE;
         taxSum = taxSum + obj.TAX;
     }
 %>
-        <tr>
-            <td align="center"></td>
-            <td><b>합계</b></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td class="text-end"><b><%=priceSum.toLocaleString()%></b></td>
-            <td class="text-end"><b><%=taxSum.toLocaleString()%></b></td>
-            <td class="text-end"><b><%=(priceSum + taxSum).toLocaleString()%></b></td>
-        </tr>
-<%
+                    <tr>
+                        <td align="center" colspan="5"><b>합계</b></td>
+                        <td class="text-end"><b><%=priceSum.toLocaleString()%></b></td>
+                        <td class="text-end"><b><%=taxSum.toLocaleString()%></b></td>
+                        <td class="text-end"><b><%=(priceSum + taxSum).toLocaleString()%></b></td>
+                    </tr>
 
-    var gap = 24 - i;
 
-    if (i > 0) {
-        for (j=0;j<gap;j++) {
-%>
-    <tr>
-        <td align="center" style="height: 23px;"></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-<%
-        }
-    }
-%>
-        <tr>
-            <td align="center" rowspan="4">견<br>적<br>내<br>용</td>
-            <td rowspan="4" colspan="4" valign="top"><%=your.CONTENT%></td>
-            <td align="center">비고</td>
-            <td align="left" colspan="3"><%=your.ETC%></td>
-        </tr>
-        <tr>
-            <td align="center">유효일</td>
-            <td align="left" colspan="3"><%=your.AVA%></td>
-        </tr>
-        <tr>
-            <td align="center">납기일</td>
-            <td align="left" colspan="3"><%=your.DLV%></td>
-        </tr>
-        <tr>
-            <td align="center">참조</td>
-            <td align="left" colspan="3"><%=your.REFER%></td>
+
+                </table>
+
+            </td>
         </tr>
     </table>
 </body>
-
 </html>
+
+<script>
+setTimeout(function() {
+    textFit(document.getElementsByClassName('box'), {minFontSize:10, maxFontSize: 50});
+}, 100);
+
+</script>
