--- a/views/doc/mungse1.html
+++ b/views/doc/mungse1.html
@@ -8,6 +8,18 @@
 <link href="/stylesheets/doc.css" rel="stylesheet">
 
 <body class="p-1">
+<%
+    if (my.FILENAME0 != '') {
+%>
+    <div style="position: absolute; top: 60px; right: 10px;">
+        <img src="<%=my.FILENAME0%>" height="40"/>
+    </div>
+<%
+    }
+%>
+
+
+
     <table class="tax_table" cellspacing="0" cellpadding="0">
         <tr>
             <td colspan="9">
