--- a/views/doc/youngsu1.html
+++ b/views/doc/youngsu1.html
@@ -8,6 +8,16 @@
 <link href="/stylesheets/doc.css" rel="stylesheet">
 
 <body class="p-1">
+<%
+    if (my.FILENAME0 != '') {
+%>
+    <div style="position: absolute; top: 72px; left: 310px;">
+        <img src="<%=my.FILENAME0%>" height="40"/>
+    </div>
+<%
+    }
+%>
+
     <table class="tax_table" cellspacing="0" cellpadding="0" style="width: 360px;">
         <tr>
             <th class="d-flex flex-row align-items-center justify-content-center">
@@ -18,11 +28,11 @@
             <td>
                 <table>
                     <tr>
-                        <th>No.</th>
-                        <td>20210415-0001</td>
+                        <th width=30>No.</th>
+                        <td><%=my.docNum%></td>
                         <td></td>
-                        <td>구도일</td>
-                        <th>귀하</th>
+                        <td align="right"><%=your.COMPANY%></td>
+                        <th width=30>귀하</th>
                     </tr>
                 </table>
             </td>
@@ -33,23 +43,23 @@
                     <tr>
                         <th rowspan="4" class="LineRight" width=30>공<br>급<br>자</th>
                         <th class="LineRight" style="line-height: 12px;">등록<br>번호</th>
-                        <td colspan="4" class=" text-center">178-02-02116</td>
+                        <td colspan="4" class="text-center"><b style="font-size: 17px;"><%=my.CNUM%></b></td>
                     </tr>
                     <tr class="LineTop">
                         <th width=40 class="LineRight">상호</th>
-                        <td class="LineRight ps-1">상호</td>
+                        <td class="LineRight ps-1"><%=my.COMPANY%></td>
                         <th width=40 class="LineRight">성명</td>
-                        <td class="ps-1">성명</td>
+                        <td class="ps-1"><%=my.NAME1%></td>
                     </tr>
                     <tr class="LineTop">
                         <th width=40 class="LineRight">주소</th>
-                        <td colspan="3" class="ps-1">주소a</td>
+                        <td colspan="3" class="ps-1"><%=my.ADDR1%> <%=my.ADDR2%></td>
                     </tr>
                     <tr class="LineTop">
                         <th width=40 class="LineRight">TEL</th>
-                        <td class="LineRight ps-1">TELa</td>
+                        <td class="LineRight ps-1"><%=my.TEL%></td>
                         <th width=40 class="LineRight">FAX</th>
-                        <td class="ps-1">FAXa</td>
+                        <td class="ps-1"><%=my.FAX%></td>
                     </tr>
                 </table>
             </td>
@@ -64,9 +74,9 @@
                         <th>비고</th>
                     </tr>
                     <tr class="LineTop">
-                        <td class="LineRight2 text-center">2021-04-15</th>
-                        <td class="LineRight2 LineBottom text-end pe-1">900,000</td>
-                        <td>비고</th>
+                        <td class="LineRight2 text-center"><%=your.EDATE%></th>
+                        <td class="LineRight2 LineBottom text-end pe-1"><%=my.TTL_PRICE.toLocaleString()%></td>
+                        <td><%=your.ETC%></th>
                     </tr>
                 </table>
             </td>
@@ -82,17 +92,25 @@
                         <th class="LineRight">품명</th>
                         <th class="LineRight">수량</th>
                         <th class="LineRight">단가</th>
-                        <th class="LineRight">금액</th>
+                        <th class="">금액</th>
                     </tr>
+<%
+    var priceSum = 0;
+    for (obj of list) {
+%>
                     <tr class="LineTop">
-                        <td class="LineRight ps-1">품명</td>
-                        <td class="LineRight text-center">1</td>
-                        <td class="LineRight text-end pe-1">500,000</td>
-                        <td class="LineRight text-end pe-1">500,000</td>
+                        <td class="LineRight ps-1"><%=obj.NAME1%></td>
+                        <td class="LineRight text-center"><%=obj.QTY%></td>
+                        <td class="LineRight text-end pe-1"><%=obj.DANGA.toLocaleString()%></td>
+                        <td class=" text-end pe-1"><%=(obj.DANGA * obj.QTY).toLocaleString()%></td>
                     </tr>
+<%
+        priceSum = priceSum + (obj.DANGA * obj.QTY);
+    }
+%>
                     <tr class="LineTop">
                         <th class="LineRight ps-1" colspan="2">합계</th>
-                        <td class="LineRight text-end pe-1" colspan="2">500,000</td>
+                        <td class="LineRight text-end pe-1" colspan="2"><%=priceSum.toLocaleString()%></td>
                     </tr>
                 </table>
             </td>
