--- a/views/doc/estimate1.html
+++ b/views/doc/estimate1.html
@@ -128,9 +128,8 @@ table { font-size: 14px; }
                 <table>
                     <tr>
                         <th width="60" class="d-flex justify-content-between">
-                            <div>사</div>
-                            <div>업</div>
-                            <div>자</div>
+                            <div>등</div>
+                            <div>록</div>
                             <div>번</div>
                             <div>호</div>
                         </th>
