--- a/views/pdt_excel_upload_completed.jade
+++ b/views/pdt_excel_upload_completed.jade
@@ -5,6 +5,6 @@ block content
         div(class='d-flex flex-column align-self-center justify-content-center')
             h4
                 | #{msg}
-            a(href='/excel/upload/'+token, class='btn btn-primary mt-4')
+            a(href='/excel/pdt_upload/'+token, class='btn btn-primary mt-4')
                 | 돌아가기
             
