--- a/views/doc/balju1.html
+++ b/views/doc/balju1.html
@@ -63,6 +63,14 @@ table { font-size: 14px; }
                     </tr>
                     <tr>
                         <th class="d-flex justify-content-between">
+                            <div>비</div>
+                            <div>고</div>
+                        </th>
+                        <td></td>
+                        <td><%=your.ETC%></td>
+                    </tr>
+                    <tr>
+                        <th class="d-flex justify-content-between">
                             <div>전</div>
                             <div>화</div>
                             <div>번</div>
