--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -43,5 +43,5 @@ html
                             span &times;
 
 
-        div(class='container-fluid py-5')
+        div(class='container-fluid')
             block content
