--- a/views/admin/user.jade
+++ b/views/admin/user.jade
@@ -24,6 +24,11 @@ block content
                         label 이름
                         div
                             input(name='NAME1')
+                            
+                    div(class='w2ui-field w2ui-span2')                    
+                        label 상호명
+                        div
+                            input(name='COMPANY')
 
                     div(class='w2ui-field w2ui-span2')                    
                         label 권한
@@ -123,6 +128,7 @@ block content
                 },
                 searches: [
                     { field: 'NAME1', caption: '이름', type: 'text' },			//세팅 해줘야함
+                    { field: 'COMPANY', caption: '상호명', type: 'text' },			//세팅 해줘야함
                     { field: 'ID', caption: '아이디', type: 'text' },			//세팅 해줘야함
                 ],
                 columns: [
@@ -135,6 +141,7 @@ block content
                         }
                     },
                     { field: 'NAME1', caption: '이름', size: '80px', resizable: true, sortable: true, attr: 'align=center' },	//세팅 해줘야함
+                    { field: 'COMPANY', caption: '상호명', size: '120px', resizable: true, sortable: true, attr: 'align=center' },	//세팅 해줘야함
                     { field: 'ID', caption: '아이디', size: '150px', resizable: true, sortable: true, attr: 'align=center' },	//세팅 해줘야함
                     { field: 'WDATE', caption: '생성일', size: '80px', resizable: true, sortable: true, attr: 'align=center',
                         render: function(rec) {
@@ -154,6 +161,7 @@ block content
                     { field: 'ID', type: 'text', required: true },	//세팅 해줘야함
                     { field: 'PASS1', type: 'password', required: true },	//세팅 해줘야함
                     { field: 'NAME1', type: 'text', required: true },	//세팅 해줘야함
+                    { field: 'COMPANY', type: 'text', required: true },	//세팅 해줘야함
                     { field: 'LEVEL1', type: 'select', required: true },	//세팅 해줘야함
                     { field: 'UPLOADED_FILES', type: 'enum', 
                         options: {
